--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,4 @@
-.hg
-.hgignore
-/*.png
-*.tmproj
-old
-camilo/
-
-develop/develop.submit.js
-
-develop/develop.submit-ERROR.AT.element.png
-
-develop/develop.lazy.js
-
-develop/develop.lazy-ERROR.AT.element.png
-
-develop/develop.assert.textContains-ERROR.AT.element.png
-
-examples/takescreenshots.js
-
-examples/takescreenshots.js
-
-examples/takescreenshots.js
+.idea
 
 .DS_Store
 *.log
